# nordkraft-io-garage-cloud

./: README.md
.github/workflows/: build_client_cli.yml  build_container-api.yml
client-cli/: Cargo.toml  README.md  uninstall.sh
client-cli/src/: main.rs  tui.rs
container-api/: .env.sample  .gitignore  Cargo.toml
container-api/.cargo/: config.toml
container-api/src/: config.rs  controller.rs  guards.rs  main.rs  models.rs  storage.rs
container-api/src/routes/: containers.rs  events.rs  ingress.rs  ipv6.rs  mod.rs  nodes.rs  status.rs
container-api/src/services/: container_manager.rs  event_store.rs  haproxy_client.rs  macvlan_manager.rs  mod.rs  nats_service.rs  peer_resolver.rs  persistence.rs  pfsense_client.rs  route_manager.rs
scripts/: install.sh  server-install.sh  uninstall.sh
setup/: INGRESS_PFSENSE.md  SETUP.md  SETUP_WIREGUARD.md  schema.sql
