[package]
name = "nordkraft"
version = "0.3.33"
edition = "2021"
description = "Nordkraft Garage Cloud CLI - Secure Container Hosting"
authors = ["Nordkraft.io"]
license = "MIT"
repository = "https://github.com/nordkraft/cli"

[[bin]]
name = "nordkraft"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
dialoguer = "0.11"
console = "0.15"
dirs = "5.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29.0"
ratatui = "0.30.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
ratatui = "0.28"
crossterm = "0.28"
