[package]
name = "container-api"
version = "0.3.34"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
async-nats = "0.33"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
dotenv = "0.15.0"
libc = "0.2.177"
async-trait = "0.1.89"
toml = "0.8"
